1999-12-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (apply_window_updates):
	prevent paging a window when unmaximizing after style update

	* fvwm/move_resize.c (handle_stick):
	removed unnecessary code

	* fvwm/geometry.c (maximize_adjust_offset):
	check if window is maximized before doing anything
	fixed shading to different page when window was maximised, moved,
	minimised, resized and then shaded

	* fvwm/update.c (apply_window_updates):
	warp shaded windows to new position when titleattop/bottom changes

	* fvwm/fvwm2.1 (Examples):
	removed remnant of experimental 'MouseClick' command

	* fvwm/functions.h (enum):
	* fvwm/functions.c (func_config):
	* fvwm/bindings.c (activate_binding):
	(binding_cmd):
	(pointerkey_binding):
	(ParseBinding):
	new command 'PointerKey'

	* fvwm/bindings.c (activate_binding):
	a small performance enhancement

	* fvwm/borders.c (draw_frame_relief):
	(RedrawBorder):
	more work on fvwm borders

	* libs/Graphics.c (RelieveRectangle):
	fixed drawing top/right and bottom/left pixels

	* fvwm/borders.c (RedrawBorder):
	fixed drawing depressable borders

	* fvwm/bindings.c (ParseBinding):
	key and stroke bindings cause title buttons to appear too

	* fvwm/update.c (apply_window_updates):
	* fvwm/cursor.c (CursorStyle):
	* fvwm/decorations.c (SelectDecor):
	* fvwm/misc.c (ButtonPosition):
	* fvwm/add_window.h:
	* fvwm/add_window.c (setup_button_windows):
	(destroy_button_windows):
	(change_button_windows):
	(setup_auxiliary_windows):
	(change_auxiliary_windows):
	* fvwm/fvwm.c (ResetAllButtons):
	(LoadDefaultButton):
	* fvwm/builtins.c (do_button_style):
	(InitFvwmDecor):
	(SetMWMButtonFlag):
	* fvwm/borders.c (SetupTitleBar):
	(set_decor_gravity):
	(RedrawButtons):
	* fvwm/screen.h (FvwmDecor):
	* fvwm/move_resize.c (resize_window):
	* fvwm/events.c (GetContext):
	* fvwm/menus.c (GetMenuOptions):
	* fvwm/fvwm.h:
	rereplaced left_w and right_w arrays with one button_w array